--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^4.6.1",
+    "font-awesome": "^4.7.0",
+    "joi": "^17.5.0",
+    "joi-browser": "^13.4.0",
+    "joi-fk-extension": "^2.1.4",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.0.0",
+    "react-hook-form": "^7.24.0",
+    "react-joi-validation": "^1.7.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
